--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -30,10 +30,10 @@
           <div class="bg-white shadow rounded overflow-hidden">
               <div class="px-4 pt-0 pb-4 cover">
                   <div class="media align-items-end profile-head">
-                      <div class="profile mr-3"><img src="https://images.unsplash.com/photo-1627737062644-e01cd6c3ad59?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1887&q=80" alt="pie" width="130" class="rounded mb-2 img-thumbnail"><a href="#" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a></div>
+                      <div class="profile mr-3"><img src="https://images.unsplash.com/photo-1627737062644-e01cd6c3ad59?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1887&q=80" alt="pie" width="130" class="rounded mb-2 img-thumbnail"><a href="updateprofile/" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a></div>
                       <div class="media-body mb-5 text-black">
                           <h4 class="mt-0 mb-0">{{request.user}}</h4>
-                          <p class="small mb-4">Brooklyn, NY</p>
+                          <p class="small mb-4">{{user.rest.address}}</p>
                       </div>
                   </div>
               </div>
@@ -54,8 +54,8 @@
                   <h5 class="mb-0">About</h5>
                   <div class="p-4 rounded shadow-sm bg-light">
                       <p class="font-italic mb-0">{{user.get_username}}</p>
-                      <p class="font-italic mb-0">1234 Apple Ave, Brooklyn, NY</p>
-                      <p class="font-italic mb-0">Tasty apple pies!</p>
+                      <p class="font-italic mb-0">{{user.rest.email}}</p>
+                      <p class="font-italic mb-0">{{user.rest.phone}}</p>
                   </div>
               </div>
               <div class="py-4 px-4">
