--- a/food_redistribution/yelp_search/templates/yelp_search/search.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/search.html
@@ -16,7 +16,6 @@
     <div class="row">
       {% if data %}
         {% for d in data%}
-          {% for i in in_database%}
       <div class="column">
         <div class="container h-100">
           <div class="d-flex justify-content-center h-100">
@@ -25,12 +24,14 @@
                 <div class="card border-light" style="width: 100%; height: 90%;">
                   <img class="card-img-top" src={{d.image_url}} alt="Card image cap" style= "width:100%; height:9vw; object-fit: cover;">
                   <div class="card-body">
-                    {% if d.phone == i.phone %}
-                      <h5 style="color:green" class="card-title">In our database!</h5>
+                    {% if d.phone in in_database %}
+                      <h5 style="color:green" class="card-title">In our database!</h5>            
                     {% endif %}
-
                     <h5 class="card-title">{{d.name}}</h5>
                     <p class="card-text">Phone: {{d.display_phone}}</p>
+      
+
+                    
                     <!--<p class="card-text">{{d.categories.title}}</p>-->
                   </div>
                 </div>
@@ -38,8 +39,7 @@
             </div>
           </div>
         </div>
-      </div>
-      {% endfor %}  
+      </div>  
     {% endfor %}
   {% else %}
     <h3>Location Not Found</h3>
