--- a/food_redistribution/yelp_search/templates/yelp_search/search.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/search.html
@@ -21,7 +21,7 @@
           <div class="d-flex justify-content-center h-100">
             <div class="user_card">
               <div class="d-flex justify-content-center">
-                <div class="card border-light" style="width: 100%; height=90%;">
+                <div class="card border-light" style="width: 100%; height: 90%;">
                   <img class="card-img-top" src={{d.image_url}} alt="Card image cap" style= "width:100%; height:9vw; object-fit: cover;">
                   <div class="card-body">
                     <h5 class="card-title">{{d.name}}</h5>
