--- a/food_redistribution/cal/templates/cal/update_event.html
+++ b/food_redistribution/cal/templates/cal/update_event.html
@@ -33,17 +33,24 @@ Event
         <form method="POST">
           {% csrf_token %}
           {{ event.as_p}}
+          {% if user.is_authenticated %}
+        {% if user.id == event.author.value %}
           <button type="submit">Update Event</button>
           <br>
       </form>
           </div>
           <div class="d-flex justify-content-center mt-3 login_container">
-            <a  href="javascript:history.back()" style="font-family:Optima;">Cancel</a>
             <a href = "{% url 'cal:event_delete' event.instance.id %}">Delete</a>
             <span class="spacer"></span>
           </div>
       </div>
-      
+      {% else %}
+                Only the author can edit/delete this post!
+            {% endif %}
+            {% else %}
+        Please login to access this page!
+    {% endif %}
+    <a  href="javascript:history.back()" style="font-family:Optima;">Cancel</a>
     </div>
   </div>
 </div>
